<resources>
    <string name="app_name">Quick Query</string>
    <item name="visible" type="id" />
    <item name="masked" type="id" />
    <string name="title_activity_main_swipe">MainSwipeActivity</string>
    <string name="action_settings">Settings</string>
    <string name="section_format">Hello World from section: %1$d</string>
    <string name="create_profile">Since this is your initial login, we have to record some information about you.\n\nPlease select 3 locations that you would like to register to your profile, these locations will be used to filter your query feed.</string>
    <string name="date_of_birth">Date of Birth:</string>
    <string name="phone_number">Phone Number:</string>
    <string name="save_profile">Save Profile</string>
    <string name="sign_out">Sign out</string>
    <string name="place_query">Place Query</string>
    <string name="select_a_query_location">Select a Query Location</string>
    <string name="save">Save</string>
    <string name="discard">Discard</string>
    <string name="upvote">Upvote</string>
    <string name="add_edit_answer">Add/Edit Answer</string>
    <string name="returns">Return</string>
    <string name="dob">dd/mm/yyyy</string>
    <string name="query_title">Query Title</string>
    <string name="speech_not_supported">Sorry! Your device doesn\'t support speech input</string>
    <string name="speech_prompt">Say the location name&#8230;</string>
    <string name="quick_query">Quick Query</string>
    <string name="email">* Email:</string>
    <string name="reset">Reset</string>
    <string name="haveAccount">Already have an account? Login</string>
    <string name="forgot_password">Forgot Password</string>
    <string name="loginEmail">Email:</string>
    <string name="loginPassword">Password:</string>
    <string name="loginSignIn">Sign In</string>
    <string name="loginForgotPassword">Forgot Password ?</string>
    <string name="loginNoAccount">Don\'t have an account yet? Register here!</string>
    <string name="mainCreateProfile">Create Profile</string>
    <string name="mainEdit">Edit</string>
    <string name="mainLocation">Location</string>
    <string name="mainUserName">User Name:</string>
    <string name="mainGender">Gender:</string>
    <string name="mainDateOfBirth">Date of Birth:</string>
    <string name="mainPhoneNumber">Phone Number:</string>
    <string name="mainSaveProfile">Save Profile</string>
    <string name="mainSignOut">Sign out</string>
    <string name="signUpEmail">* Email:</string>
    <string name="signUpPassword">* Password:</string>
    <string name="re_type_password">* Re-type Password:</string>
    <string name="haveAccountAlready">Already have an account? Login</string>
    <string name="register">Register</string>
    <string name="splash">Quick Query</string>
    <string name="autoCompLocation">Location</string>
    <string name="autoCompLocDetail">Location Detail</string>
    <string name="returnAnswerDialog">Return</string>
    <string name="answerHere">Input your Answer here</string>
    <string name="inputMob">Input your Mobile No</string>
    <string name="inputUserName">Input your User Name</string>
    <string name="user_name">User Name</string>
    <string name="no_answer_found">No Answer Found</string>
    <string name="title">Title</string>
    <string name="description">Description</string>
    <string name="input_your_query_here">Input your Query here</string>
    <string name="edit">Edit</string>
    <string name="location">Location</string>
</resources>
