<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:descendantFocusability="beforeDescendants"
    android:focusableInTouchMode="true"
    android:padding="16dp"
    android:orientation="vertical"
    tools:context="com.project.app.quickquery.activities.ProfileActivity">

    <android.support.v4.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:text="@string/place_query"
                android:textAlignment="center"
                android:textColor="#333"
                android:textSize="30sp" />

            <ImageView
                android:id="@+id/ivSpeech"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/speech"
                android:layout_gravity="right"
                android:layout_marginRight="10dp"
                android:layout_marginTop="30dp"/>

            <Button
                android:id="@+id/add_location_button"
                style="@style/Widget.AppCompat.Button.Colored"
                android:layout_width="match_parent"
                android:layout_height="30dp"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                android:layout_marginTop="5dp"
                android:background="#263238"
                android:text="@string/select_a_query_location"
                android:textAllCaps="false"
                android:textSize="12sp" />

            <TextView
                android:id="@+id/location_textview"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:drawableLeft="@drawable/ic_ios_location"
                android:gravity="center|left"
                android:hint="@string/location"
                android:textColor="#000"
                android:textSize="12sp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="30dp"
                android:text="@string/title"
                android:textColor="#333"
                android:textSize="14sp" />

            <EditText
                android:id="@+id/title_edittext"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:background="@drawable/selector_xml_listview_back"
                android:hint="@string/title"
                android:padding="5dp"
                android:textColor="#333"
                android:textSize="15sp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="@string/description"
                android:textColor="#333"
                android:textSize="14sp" />

            <EditText
                android:id="@+id/query_content_edittext"
                android:layout_width="match_parent"
                android:layout_height="120dp"
                android:layout_marginTop="10dp"
                android:background="@drawable/selector_xml_listview_back"
                android:gravity="top|left"
                android:hint="@string/input_your_query_here"
                android:maxLines="10"
                android:padding="5dp"
                android:textColor="#333"
                android:textSize="14sp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="30dp">

                <Button
                    android:id="@+id/save_button"
                    style="@style/Widget.AppCompat.Button.Colored"
                    android:layout_width="0dp"
                    android:layout_height="30dp"
                    android:layout_weight="1"
                    android:background="#263238"
                    android:text="@string/save"
                    android:textAllCaps="false" />

                <Button
                    android:id="@+id/cancel_button"
                    style="@style/Widget.AppCompat.Button.Colored"
                    android:layout_width="0dp"
                    android:layout_height="30dp"
                    android:layout_marginLeft="40dp"
                    android:layout_weight="1"
                    android:background="#263238"
                    android:text="@string/discard"
                    android:textAllCaps="false" />

            </LinearLayout>
        </LinearLayout>
    </android.support.v4.widget.NestedScrollView>



</LinearLayout>