<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp"
    android:orientation="vertical"
    android:background="#fff"
    android:focusable="true"
    android:focusableInTouchMode="true"
    tools:context="com.project.app.quickquery.activities.ForgotPasswordActivity">

    <ImageView
        android:id="@+id/icon"
        android:layout_gravity="center"
        android:background="@drawable/login_avtar"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:layout_marginTop="50dp"
        android:layout_centerHorizontal="true"/>

    <TextView
        android:id="@+id/logo_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/icon"
        android:text="@string/quick_query"
        android:textStyle="bold"
        android:textSize="20sp"
        android:textColor="#333"
        android:textAlignment="center" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:background="@drawable/selector_xml_listview_back"
        android:layout_marginTop="25dp"
        android:padding="20dp"
        android:layout_below="@id/logo_text">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="10dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/email"
                android:textColor="#333"
                android:textSize="15sp"
                android:layout_marginRight="10dp"
                android:layout_gravity="center"/>

            <EditText
                android:id="@+id/txt_reset_textbox"
                android:inputType="textEmailAddress"
                android:singleLine="true"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="5dp"
                android:textSize="15sp"
                android:background="@drawable/selector_xml_listview_back" />

        </LinearLayout>

        <Button
            android:id="@+id/btn_reset_password"
            android:text="@string/reset"
            android:background="#263238"
            style="@style/Widget.AppCompat.Button.Colored"
            android:layout_width="wrap_content"
            android:layout_height="30dp"
            android:textAllCaps="false"
            android:layout_marginTop="30dp"
            android:layout_gravity="right"/>

        <TextView
            android:id="@+id/btn_signin"
            android:text="@string/haveAccount"
            android:textColor="@color/colorPrimaryDark"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:layout_gravity="right"/>

    </LinearLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/forgot_password"
        android:layout_marginTop="15dp"
        android:layout_marginLeft="20dp"
        android:textSize="14sp"
        android:textColor="#333"
        android:background="#fff"
        android:paddingLeft="10dp"
        android:paddingRight="10dp"
        android:layout_below="@id/logo_text"/>

</RelativeLayout>
