<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:background="@drawable/selector_dialog_background"
    android:padding="16dp"
    android:layout_width="350dp"
    android:layout_height="wrap_content"
    android:descendantFocusability="beforeDescendants"
    android:focusableInTouchMode="true">

    <EditText
        android:id="@+id/username_edittext"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="15sp"
        android:textColor="#333"
        android:padding="5dp"
        android:hint="@string/inputUserName"
        android:singleLine="true"
        android:layout_marginTop="5dp"
        android:background="@drawable/selector_xml_listview_back"/>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginLeft="20dp">

        <Button
            android:id="@+id/save_button"
            android:layout_width="wrap_content"
            android:layout_height="25dp"
            android:background="@drawable/selector_xml_dialog_btn"
            android:padding="5dp"
            android:text="@string/save"
            android:textSize="12sp"
            android:textColor="#fff"
            android:textAllCaps="false"/>

        <Button
            android:id="@+id/cancel_button"
            android:layout_width="wrap_content"
            android:layout_height="25dp"
            android:layout_alignParentRight="true"
            android:background="@drawable/selector_xml_dialog_btn"
            android:padding="5dp"
            android:text="@string/discard"
            android:textSize="12sp"
            android:textColor="#fff"
            android:textAllCaps="false"/>

    </RelativeLayout>

</LinearLayout>