<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:descendantFocusability="beforeDescendants"
    android:focusableInTouchMode="true"
    android:padding="16dp"
    tools:context="com.project.app.quickquery.activities.ProfileActivity">

    <android.support.v4.widget.NestedScrollView
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:scrollbars="none">

        <LinearLayout
            android:id="@+id/form_layout"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:text="@string/mainCreateProfile"
                android:textAlignment="center"
                android:textColor="#333"
                android:textSize="30sp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="@string/create_profile"
                android:textColor="#555"
                android:textSize="16sp" />

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp">

                <Button
                    android:id="@+id/add_edit_button1"
                    style="@style/Widget.AppCompat.Button.Colored"
                    android:layout_width="40dp"
                    android:layout_height="25dp"
                    android:layout_alignParentRight="true"
                    android:layout_centerVertical="true"
                    android:layout_marginTop="10dp"
                    android:background="#263238"
                    android:text="@string/mainEdit"
                    android:textAllCaps="false"
                    android:textSize="12sp"
                    tools:ignore="RtlHardcoded" />

                <TextView
                    android:id="@+id/location_textview1"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:layout_marginRight="10dp"
                    android:layout_toLeftOf="@id/add_edit_button1"
                    android:drawableLeft="@drawable/ic_ios_location"
                    android:gravity="center|left"
                    android:hint="@string/mainLocation"
                    android:textColor="#000"
                    android:textSize="12sp" />

            </RelativeLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp">

                <Button
                    android:id="@+id/add_edit_button2"
                    style="@style/Widget.AppCompat.Button.Colored"
                    android:layout_width="40dp"
                    android:layout_height="25dp"
                    android:layout_alignParentRight="true"
                    android:layout_centerVertical="true"
                    android:layout_marginTop="10dp"
                    android:background="#263238"
                    android:text="@string/edit"
                    android:textAllCaps="false"
                    android:textSize="12sp" />

                <TextView
                    android:id="@+id/location_textview2"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:layout_marginRight="10dp"
                    android:layout_toLeftOf="@id/add_edit_button2"
                    android:drawableLeft="@drawable/ic_ios_location"
                    android:gravity="center|left"
                    android:hint="@string/mainLocation"
                    android:textColor="#000"
                    android:textSize="12sp" />

            </RelativeLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp">

                <Button
                    android:id="@+id/add_edit_button3"
                    style="@style/Widget.AppCompat.Button.Colored"
                    android:layout_width="40dp"
                    android:layout_height="25dp"
                    android:layout_alignParentRight="true"
                    android:layout_centerVertical="true"
                    android:layout_marginTop="10dp"
                    android:background="#263238"
                    android:text="@string/mainEdit"
                    android:textAllCaps="false"
                    android:textSize="12sp" />

                <TextView
                    android:id="@+id/location_textview3"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:layout_marginRight="10dp"
                    android:layout_toLeftOf="@id/add_edit_button3"
                    android:drawableLeft="@drawable/ic_ios_location"
                    android:gravity="center|left"
                    android:hint="@string/mainLocation"
                    android:textColor="#000"
                    android:textSize="12sp" />

            </RelativeLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="110dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginRight="10dp"
                    android:gravity="right"
                    android:text="@string/mainUserName"
                    android:textColor="#333"
                    android:textSize="15sp" />

                <EditText
                    android:id="@+id/username_edittext"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/selector_xml_listview_back"
                    android:inputType="text"
                    android:padding="5dp"
                    android:singleLine="true"
                    android:textSize="15sp" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="110dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginRight="10dp"
                    android:gravity="right"
                    android:text="@string/mainGender"
                    android:textColor="#333"
                    android:textSize="15sp" />

                <Spinner
                    android:id="@+id/genderspinner"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:textSize="15sp" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="110dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginRight="10dp"
                    android:focusable="false"
                    android:gravity="right"
                    android:text="@string/mainDateOfBirth"
                    android:textColor="#333"
                    android:textSize="15sp" />

                <EditText
                    android:id="@+id/Birthday"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/selector_xml_listview_back"
                    android:focusable="false"
                    android:hint="@string/dob"
                    android:padding="5dp"
                    android:textSize="15sp" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="110dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginRight="10dp"
                    android:gravity="right"
                    android:text="@string/mainPhoneNumber"
                    android:textColor="#333"
                    android:textSize="15sp" />

                <EditText
                    android:id="@+id/txt_profile_phone_number"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/selector_xml_listview_back"
                    android:inputType="phone"
                    android:padding="5dp"
                    android:singleLine="true"
                    android:textSize="15sp" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="30dp">

                <Button
                    android:id="@+id/btn_save_profile"
                    style="@style/Widget.AppCompat.Button.Colored"
                    android:layout_width="0dp"
                    android:layout_height="30dp"
                    android:layout_weight="1"
                    android:background="#263238"
                    android:text="@string/mainSaveProfile"
                    android:textAllCaps="false" />

                <Button
                    android:id="@+id/btn_sign_out"
                    style="@style/Widget.AppCompat.Button.Colored"
                    android:layout_width="0dp"
                    android:layout_height="30dp"
                    android:layout_marginLeft="10dp"
                    android:layout_weight="1"
                    android:background="#263238"
                    android:text="@string/mainSignOut"
                    android:textAllCaps="false" />

            </LinearLayout>

        </LinearLayout>

    </android.support.v4.widget.NestedScrollView>

</LinearLayout>