<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:descendantFocusability="beforeDescendants"
    android:focusableInTouchMode="true"
    android:padding="16dp"
    android:id="@+id/activity_login"
    android:orientation="vertical"
    tools:context="com.project.app.quickquery.activities.LoginActivity">


    <ImageView
        android:id="@+id/icon"
        android:layout_gravity="center"
        android:background="@drawable/login_avtar"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:layout_marginTop="50dp"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/icon"
        android:text=""
        android:textStyle="bold"
        android:textSize="20sp"
        android:textColor="#333"
        android:textAlignment="center"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="20dp">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:gravity="center"
            android:layout_gravity="center"
            android:layout_marginRight="10dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/loginEmail"
                android:textColor="#333"
                android:textSize="18sp"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/loginPassword"
                android:textColor="#333"
                android:textSize="18sp"
                android:layout_marginTop="15dp"/>

        </LinearLayout>

        <LinearLayout
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            android:orientation="vertical">

            <EditText
                android:id="@+id/txt_login_email"
                android:inputType="textEmailAddress"
                android:singleLine="true"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="5dp"
                android:textSize="18sp"
                android:background="@drawable/selector_xml_listview_back" />

            <EditText
                android:id="@+id/txt_login_password"
                android:inputType="textPassword"
                android:singleLine="true"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="5dp"
                android:textSize="18sp"
                android:background="@drawable/selector_xml_listview_back"
                android:layout_marginTop="10dp" />

        </LinearLayout>

    </LinearLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp">

        <Button
            android:id="@+id/btn_login"
            android:text="@string/loginSignIn"
            android:background="#263238"
            style="@style/Widget.AppCompat.Button.Colored"
            android:layout_width="wrap_content"
            android:layout_height="30dp"
            android:textAllCaps="false"
            android:layout_marginLeft="60dp"/>

        <TextView
            android:id="@+id/btn_forgot_password"
            android:layout_centerHorizontal="true"
            android:text="@string/loginForgotPassword"
            android:textColor="@color/colorPrimaryDark"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="14sp"
            android:layout_alignParentEnd="true"
            android:layout_centerVertical="true"/>

    </RelativeLayout>

    <TextView
        android:id="@+id/btn_signup"
        android:textStyle="bold"
        android:text="@string/loginNoAccount"
        android:textColor="@color/colorPrimaryDark"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:layout_gravity="center"/>

    <com.google.android.gms.common.SignInButton
        android:id="@+id/google_sign_in"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginLeft="20dp" />

</LinearLayout>
