<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:background="@drawable/selector_dialog_background"
    android:padding="16dp"
    android:layout_width="350dp"
    android:layout_height="wrap_content"
    android:descendantFocusability="beforeDescendants"
    android:focusableInTouchMode="true">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/title"
        android:textColor="#333"
        android:textSize="14sp"/>

    <EditText
        android:id="@+id/title_edittext"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="15sp"
        android:textColor="#333"
        android:padding="5dp"
        android:hint="@string/title"
        android:singleLine="true"
        android:layout_marginTop="5dp"
        android:background="@drawable/selector_xml_listview_back"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/description"
        android:textColor="#333"
        android:textSize="14sp"
        android:layout_marginTop="10dp" />

    <EditText
        android:id="@+id/answer_content_edittext"
        android:layout_width="match_parent"
        android:layout_height="120dp"
        android:textSize="14sp"
        android:textColor="#333"
        android:hint="@string/answerHere"
        android:padding="5dp"
        android:maxLines="10"
        android:gravity="top|left"
        android:layout_marginTop="5dp"
        android:background="@drawable/selector_xml_listview_back"/>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginLeft="20dp">

        <Button
            android:id="@+id/save_button"
            android:layout_width="wrap_content"
            android:layout_height="25dp"
            android:background="@drawable/selector_xml_dialog_btn"
            android:padding="5dp"
            android:text="Save"
            android:textSize="12sp"
            android:textColor="#fff"
            android:textAllCaps="false"/>

        <Button
            android:id="@+id/cancel_button"
            android:layout_width="wrap_content"
            android:layout_height="25dp"
            android:layout_alignParentRight="true"
            android:background="@drawable/selector_xml_dialog_btn"
            android:padding="5dp"
            android:text="Discard"
            android:textSize="12sp"
            android:textColor="#fff"
            android:textAllCaps="false"/>

    </RelativeLayout>

</LinearLayout>